update to Base64